--- a/src/main/resources/com/mahjong/mahjongdesktop/register.fxml
+++ b/src/main/resources/com/mahjong/mahjongdesktop/register.fxml
@@ -5,16 +5,16 @@
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.mahjong.mahjongdesktop.LoginController"
+      fx:controller="com.mahjong.mahjongdesktop.RegisterController"
       spacing="10" alignment="CENTER" style="-fx-padding: 20;">
 
-    <Label text="Login" style="-fx-font-size: 18px;" />
+    <Label text="Register" style="-fx-font-size: 18px;" />
 
     <TextField fx:id="usernameField" promptText="Username" />
     <PasswordField fx:id="passwordField" promptText="Password" />
 
-    <Button text="Login" onAction="#handleLogin" />
-    <Label fx:id="errorLabel" textFill="red" />
+    <Button text="Register" onAction="#handleRegister" />
+    <Label fx:id="statusLabel" textFill="red" />
 
-    <Hyperlink text="Don't have an account? Register here" onAction="#handleGoToRegister"/>
+    <Hyperlink text="Already have an account? Login here" onAction="#handleGoToLogin"/>
 </VBox>
