--- a/src/main/resources/com/mahjong/mahjongdesktop/login.fxml
+++ b/src/main/resources/com/mahjong/mahjongdesktop/login.fxml
@@ -5,7 +5,7 @@
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.mahjong.mahjongdesktop.LoginController"
+      fx:controller="com.mahjong.mahjongdesktop.controllers.LoginController"
       spacing="10" alignment="CENTER" style="-fx-padding: 20;">
 
     <Label text="Login" style="-fx-font-size: 18px;" />
