storing userId in AppState, and added action buttons for host in room

--- a/src/main/resources/com/mahjong/mahjongdesktop/room.fxml
+++ b/src/main/resources/com/mahjong/mahjongdesktop/room.fxml
@@ -38,6 +38,9 @@
             <TableColumn fx:id="botColumn"
                          text="Type"
                          prefWidth="150" />
+            <TableColumn fx:id="actionColumn"
+                         text="Actions"
+                         prefWidth="250" />
         </columns>
     </TableView>
 
